# arduino-resource-monitor

./: .gitignore  README.md
arduino-resource-monitor/: platformio.ini
arduino-resource-monitor/lib/NoiascaLiquidCrystal/: NoiascaLiquidCrystal.cpp  NoiascaLiquidCrystal.h  license.txt
arduino-resource-monitor/lib/NoiascaLiquidCrystal/NoiascaHW/: lcd_4bit.h  lcd_MCP23S08.h  lcd_PCF8574.h  lcd_i2c.h
arduino-resource-monitor/lib/NoiascaLiquidCrystal/utility/: NoiascaConverter.h
arduino-resource-monitor/lib/arduino-lcdHelper-library/: README.md
arduino-resource-monitor/lib/arduino-lcdHelper-library/src/: lcdHelper.h  lcdHelper.tpp
arduino-resource-monitor/src/: main.cpp  main.h
arduino-resource-monitor/src/helpers/: helpers.h  lcd.cpp
client/: README.md  build-releases.sh  platformio.ini
client/lib/NoiascaLiquidCrystal/: README.md  keywords.txt  legacy.h  library.properties
client/lib/NoiascaLiquidCrystal/NoiascaHW/: lcd_MCP23017.h  lcd_PCF8574.h  lcd_PCF8574_fast.h  lcd_wire.h
client/lib/NoiascaLiquidCrystal/utility/: NoiascaConverter.cpp  NoiascaCustomCharacters.h  NoiascaUTF8.h
client/lib/arduino-lcdHelper-library/: LICENSE  README.md  library.properties
client/lib/arduino-lcdHelper-library/src/: lcdHelper.h  lcdHelper.tpp
client/src/: main.c  main.cpp  main.h
client/src/helpers/: backlight.c  backlight.cpp  displayWrapper.cpp  handleData.c  handleData.cpp  handleDisplay.cpp  handleHandshake.cpp  helpers.h  misc.c  serialWrapper.cpp  updateDisplay.c
server/: icon.xcf
server/linux/: CMakeLists.txt  README.md  build-releases.sh  server.c  server.cpp  server.h
server/linux/helpers/: getMeasurements.c  getMeasurements.cpp  getSensors.c  getSensors.cpp  handleStreams.c  helpers.h  makeConnection.c  makeConnection.cpp  misc.c  misc.cpp  sendMeasurements.c  sendMeasurements.cpp  serialWrapper.c  serialWrapper.cpp  utils.cpp
server/linux/lib/: README.md
server/linux/lib/serial/include/serial/: serial.h
server/linux/lib/serial/include/serial/impl/: unix.h
server/linux/lib/serial/src/: serial.cc
server/linux/lib/serial/src/impl/: unix.cc
server/linux/src/: server.c  server.h
server/linux/src/comm/: comm.h  makeConnection.c  sendMeasurements.c  serialWrapper.c
server/linux/src/data/: configWrapper.c  data.h  handleStreams.c
server/linux/src/helpers/: helpers.h
server/linux/src/sensors/: getMeasurements.c  getSensors.c  sensors.h
server/windows/: Program.cs  README.md  Settings.cs  build-releases.bat  windows.csproj  windows.sln
server/windows/Properties/PublishProfiles/: FolderProfile.pubxml
server/windows/helpers/: Communication.cs  Config.cs  Connection.cs  FindArduino.cs  Measurements.cs  Sensors.cs
server/windows/src/: Program.cs  Settings.cs
server/windows/src/comm/: Communication.cs  Connection.cs
server/windows/src/data/: Config.cs
server/windows/src/sensors/: Measurements.cs  Sensors.cs
